# vault-pass

./: .gitignore  LICENSE  README.md  pyproject.toml
vault_pass/: __init__.py  cli.py  core.py
